--- a/views/index.njk
+++ b/views/index.njk
@@ -4,10 +4,10 @@
     </head>
 
     <body>
-        <form action="" method="POST">
+        <form action="auth" method="POST">
             <input type="text" name="username" />
             <input type="password" name="password" />
-            <button type="submit" value="Logar" />
+            <button type="submit">Logar</button>
         </form>
     </body>
 </html>
