--- a/app/views/auth/signup.njk
+++ b/app/views/auth/signup.njk
@@ -1,22 +1,7 @@
-<html>
+{% extends 'layouts/default.njk' %}
 
-<head>
-  <meta charset="UTF-8" />
-  <title>Snipettfy - Salve seus snippets de código</title>
+{% block body %}
 
-  <link rel "shortcut icon" href="/favicon/png" type="image/x-icon" />
-  <link rel="stylesheet" href="/styles.css">
-  <link rel="stylesheet" href="/dracula.css">
-
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-  <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-
-  <script src="/main.js"></script>
-</head>
-
-<body>
   <div class="auth-wrapper">
     <form method="POST" action="" class="form-signin">
 
@@ -32,6 +17,4 @@
     </form>
   </div>
 
-</body>
-
-</html>
+{% endblock %}
