--- a/app/views/auth/signup.njk
+++ b/app/views/auth/signup.njk
@@ -3,7 +3,7 @@
 {% block body %}
 
   <div class="auth-wrapper">
-    <form method="POST" action="" class="form-signin">
+    <form method="POST" action="/register" class="form-signin">
 
       <h1>Criar conta</h1>
 
