--- a/app/views/auth/signin.njk
+++ b/app/views/auth/signin.njk
@@ -3,7 +3,7 @@
 {% block body %}
 
   <div class="auth-wrapper">
-    <form method="POST" action="" class="form-signin">
+    <form method="POST" action="/authenticate" class="form-signin">
 
       <h1>Fazer Login</h1>
 
