Categorias no dashboard

--- a/app/views/dashboard/index.njk
+++ b/app/views/dashboard/index.njk
@@ -1,1 +1,34 @@
-<h1>dashboard</h1>
+{% extends 'layouts/default.njk' %}
+
+{% block body %}
+
+  <div class="wrapper">
+    <nav id="main">
+      <div class="header">
+        <strong>Minha bibioteca</strong>
+        <a href="/signout">Sair</a>
+      </div>
+
+      <div class="categories">
+        <strong>CATEGORIAS</strong>
+
+        <ul>
+        {% for category in categories %}
+
+          <li>
+            <a href="/app/categories/{{ category.id }}">
+              {{category.title}}
+              <span>{{category.Snippets.length}}</span>
+            </a>
+          </li>
+
+        {% endfor %}
+
+        </ul>
+
+        <a href="">NOVA CATEGORIA</a>
+      </div>
+    </nav>
+  </div>
+
+{% endblock %}
