--- a/app/views/layouts/default.njk
+++ b/app/views/layouts/default.njk
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Snipettfy - Salve seus snippets de código</title>
 
-    <link rel "shortcut icon" href="/favicon/png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/dracula.css">
 
@@ -17,10 +17,7 @@
   </head>
 
   <body>
-
     {% include 'partials/flash.njk' %}
-
     {% block body %} {% endblock %}
-
   </body>
 </html>
