--- a/app/views/snippets/show.njk
+++ b/app/views/snippets/show.njk
@@ -7,7 +7,7 @@
 
     <section class="snippet-content">
       <div class="actions">
-        <a href="#" class="edit">Editar</a>
+        <a href="#" data-modal-open="#edit-snippet" class="edit">Editar</a>
 
         <form method="POST" action="">
           <button type="submit">Remover</button>
@@ -17,6 +17,19 @@
       <h1>{{ currentSnippet.title }}</h1>
       <div class="content">{{ currentSnippet.formattedContent | safe }}</div>
     </section>
+
+    <div class="modal" id="edit-snippet">
+      <form class="modal-content" method="POST" action="/app/categories/{{ activeCategory }}/snippets/{{ currentSnippet.id}}?_method=PUT">
+        <input type="text" name="title" placeholder="Título do snippet" value="{{ currentSnippet.title }}">
+
+        <div class="content-container">
+          <textarea name="content" class="mde" placeholder="Conteúdo do snippet">{{ currentSnippet.content }}</textarea>
+        </div>
+
+        <button type="submit">SALVAR SNIPPET</button>
+        <a href="#" data-modal-close="#new-snippet">CANCELAR</a>
+      </form>
+    </div>
 
   </div>
 {% endblock %}
