--- a/app/views/auth/signin.njk
+++ b/app/views/auth/signin.njk
@@ -5,6 +5,8 @@
   <div class="auth-wrapper">
     <form method="POST" action="/authenticate" class="form-signin">
 
+      <img src="http://onnze.com/img/logo.png"/>
+
       <h1>Fazer Login</h1>
 
       <input name="email" type="email" placeholder="Digite seu e-mail">
