--- a/app/views/layouts/default.njk
+++ b/app/views/layouts/default.njk
@@ -2,7 +2,7 @@
 
   <head>
     <meta charset="UTF-8" />
-    <title>Snipettfy - Salve seus snippets de código</title>
+    <title>ONNZE Snipettfy</title>
 
     <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="/styles.css">
