--- a/app/views/partials/nav.njk
+++ b/app/views/partials/nav.njk
@@ -1,6 +1,6 @@
 <nav id="main">
   <div class="header">
-    <strong>Minha bibioteca</strong>
+    <strong>ONNZE Snippets</strong>
     <a href="/signout">Sair</a>
   </div>
 
